Bug 476378. Use U+002D instead of U+2010 for a soft hyphen if the first font in the fontgroup doesn't have a glyph for U+2010. r+sr=roc